# tp

.github/workflows/: blank.yml
task1/: run.sh
task2/: CMakeLists.txt
task2/A/: preparing.py
task2/B/: CMakeLists.txt  lib.h
task2/C/: main.cpp  sometests.cpp
task3/: CMakeLists.txt
task3/src/: CMakeLists.txt
task5/tests/01-simple-library/: AddTestCase.cpp  LeapTestCase.cpp
task5/tests/02-tree/: TreeTestCase.cpp  TreeTestCase.h
task5/tests/03-weather/: WeatherMock.h  WeatherTestCase.cpp  WeatherTestCase.h
